[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/MeshLibrary/MeshLibrary.tres" type="MeshLibrary" id=1]
[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/clues/crackling.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/sfx/wind.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/clues/water.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/Goal/Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Main_original/Main_original.gd" type="Script" id=7]
[ext_resource path="res://scenes/Monster/Monster.tscn" type="PackedScene" id=8]
[ext_resource path="res://audio/clues/sand.ogg" type="AudioStream" id=9]

[sub_resource type="PrismMesh" id=7]
size = Vector3( 1, 0.5, 0.2 )

[node name="Main" type="Spatial"]
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0.5, 2.5 )

[node name="MeshInstance" type="MeshInstance" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, -1 )
mesh = SubResource( 7 )
material/0 = null

[node name="Camera" type="Camera" parent="Player"]
current = true

[node name="Monster" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -1.5 )

[node name="Goal" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0.5, 2.5 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 1, 1, 1 )
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 0, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 0, 65531, 0, 0, 65532, 0, 1, 65533, 0, 1, 65534, 0, 0, 65535, 0, 0, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 0, 5, 1, 1, 6, 1, 0, 7, 1, 1, 8, 1, 1, 9, 1, 1, 10, 1, 1, 11, 1, 0, 65531, 1, 0, 65532, 1, 1, 65533, 1, 1, 65534, 1, 1, 65535, 1, 1, 0, 2, 1, 1, 2, 1, 2, 2, 1, 3, 2, 1, 4, 2, 0, 5, 2, 1, 6, 2, 0, 7, 2, 1, 8, 2, 1, 9, 2, 1, 10, 2, 1, 11, 2, 0, 65531, 2, 0, 65532, 2, 1, 65533, 2, 1, 65534, 2, 1, 65535, 2, 1, 0, 3, 1, 1, 3, 1, 2, 3, 1, 3, 3, 1, 4, 3, 0, 5, 3, 1, 6, 3, 1, 7, 3, 1, 8, 3, 1, 9, 3, 1, 10, 3, 1, 11, 3, 0, 65531, 3, 0, 65532, 3, 1, 65533, 3, 1, 65534, 3, 1, 65535, 3, 1, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 0, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 6, 65531, 0, 7, 65531, 0, 8, 65531, 0, 9, 65531, 0, 10, 65531, 0, 11, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 0, 65532, 1, 1, 65532, 1, 2, 65532, 1, 3, 65532, 1, 4, 65532, 0, 5, 65532, 1, 6, 65532, 1, 7, 65532, 1, 8, 65532, 1, 9, 65532, 1, 10, 65532, 1, 11, 65532, 0, 65531, 65532, 0, 65532, 65532, 1, 65533, 65532, 1, 65534, 65532, 1, 65535, 65532, 1, 0, 65533, 1, 1, 65533, 1, 2, 65533, 1, 3, 65533, 1, 4, 65533, 0, 5, 65533, 1, 6, 65533, 1, 7, 65533, 1, 8, 65533, 1, 9, 65533, 0, 10, 65533, 1, 11, 65533, 0, 65531, 65533, 0, 65532, 65533, 1, 65533, 65533, 1, 65534, 65533, 0, 65535, 65533, 1, 0, 65534, 1, 1, 65534, 1, 2, 65534, 1, 3, 65534, 1, 4, 65534, 1, 5, 65534, 1, 6, 65534, 1, 7, 65534, 1, 8, 65534, 1, 9, 65534, 1, 10, 65534, 1, 11, 65534, 0, 65531, 65534, 0, 65532, 65534, 1, 65533, 65534, 1, 65534, 65534, 0, 65535, 65534, 1, 0, 65535, 1, 1, 65535, 1, 2, 65535, 1, 3, 65535, 1, 4, 65535, 0, 5, 65535, 1, 6, 65535, 1, 7, 65535, 1, 8, 65535, 0, 9, 65535, 0, 10, 65535, 1, 11, 65535, 0, 65531, 65535, 0, 65532, 65535, 1, 65533, 65535, 1, 65534, 65535, 0, 65535, 65535, 1 )
}
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AmbientSFX" type="Spatial" parent="."]

[node name="WindSFX" type="AudioStreamPlayer3D" parent="AmbientSFX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, -1.5 )
stream = ExtResource( 4 )
autoplay = true
max_distance = 3.0

[node name="WaterSFX" type="AudioStreamPlayer3D" parent="AmbientSFX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0.5, -2.5 )
stream = ExtResource( 5 )
autoplay = true
max_distance = 3.0

[node name="CracklingSFX" type="AudioStreamPlayer3D" parent="AmbientSFX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, 2.5 )
stream = ExtResource( 3 )
autoplay = true
max_distance = 3.0

[node name="SandSFX" type="AudioStreamPlayer3D" parent="AmbientSFX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0.5, -3.5 )
stream = ExtResource( 9 )
autoplay = true
max_distance = 3.0

[connection signal="echolocate" from="Player" to="." method="_on_Player_echolocate"]
[connection signal="player_catched" from="Monster" to="." method="_on_Monster_player_catched"]
[connection signal="goal_reached" from="Goal" to="." method="_on_Goal_goal_reached"]
